--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,9 +1,10 @@
 .contact {
+  
     height: 100%;
     padding-top: 40vh;
     overflow: hidden;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     background: 
       linear-gradient(
@@ -21,9 +22,6 @@
   
     &__list {
      
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-gap: 2rem;
       font-size: 1.5rem;
     }
   
